Rewrote the ftbutton class.  This one uses a simple while loop that runs as a task to monitor the pin

--- a/DIOSquareTest/DIOSquareTest.csproj
+++ b/DIOSquareTest/DIOSquareTest.csproj
@@ -54,6 +54,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="ft232hdio.cs" />
+    <Compile Include="FTButtonTimer.cs" />
     <Compile Include="FTButton.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
